apps/ljwx-chat/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ljwx-chat
spec:
  type: ClusterIP
  selector:
    app: ljwx-chat
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
